# ai-angineers-handbook

./: .gitignore  README.md  pyproject.toml
building_agents_from_scratch/: README.md  pyproject.toml
building_agents_from_scratch/deep_research_agent/: README.md
building_agents_from_scratch/deep_research_agent/notebooks/: Untitled.ipynb
building_agents_from_scratch/planning/: README.md
building_agents_from_scratch/planning/reflection/: README.md
building_agents_from_scratch/planning/reflection/notebooks/: reflection.ipynb
building_agents_from_scratch/planning/reflection/src/: main.py
building_agents_from_scratch/tool_use/: README.md  requirements.txt
building_agents_from_scratch/tool_use/notebooks/: tool_use.ipynb
building_agents_from_scratch/tool_use/src/: tool_registry.py  tools.py
tool_use/: requirements.txt
tool_use/src/: main.py  tool_registry.py  tools.py
