[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_from_scratch"
version = "0.1.0"
description = "AI Agent from scratch"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Aurimas Griciunas", email = "griciunas.aurimas@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0.290",
    "mypy>=1.0",
]

[tool.ruff]
select = ["E", "F", "I", "B"]
line-length = 88

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
strict = true 